--- a/backend/server-a/package.json
+++ b/backend/server-a/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "connect": "^3.7.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "js-yaml": "^4.1.0",
+    "mongoose": "^7.0.3",
     "swagger-tools": "^0.10.4"
   }
 }
