--- a/frontend/SandwichStore/package.json
+++ b/frontend/SandwichStore/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.15",
+    "axios": "^1.3.5",
     "hero-slider": "^3.1.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "typescript-cookie": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
