--- a/backend/server-a/package.json
+++ b/backend/server-a/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "kill": "kill -9 $(lsof -ti:3000)"
+    "kill": "kill -9 $(lsof -ti:3000)",
+    "reset-db": "node static/init-db.js"
   },
   "keywords": [],
   "author": "",
