dockerize the app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,15 +14,17 @@ services:
   # server-a is based on the Docker image the groups produce and build themselves.
   server-a:
     # Change the image information to match your server A image
-    image: # $USERNAME/$IMAGENAME:$TAG, something like group000/node-swagger:3a
+    image: project/server-a:1.0
     # 'depends_on' and 'command' are  to be used when used
     # with RabbitMQ service in this file. 'depends_on' must be set
     # to RabbitMQ service's name from this file, and 'command'
     # can be modified to be anything, but what is given should
     # work. Just uncomment them
-    # depends_on:
-    #   -  rapid-runner-rabbit
-    # command: ["./utils/wait-for-it.sh", "rapid-runner-rabbit:5672", "--",  "npm", "start"]
+    depends_on:
+      -  mongodb
+      -  rapid-runner-rabbit
+    # command: ["node", "."]
+    command: ["./utils/wait-for-it.sh", "rapid-runner-rabbit:5672", "--",  "npm", "start"]
     build:
       dockerfile: Dockerfile
       context:  ./backend/server-a
@@ -33,6 +35,12 @@ services:
       - "12345:8080"
     networks:
       - backend
+    environment:
+      MONGODB_USER: admin
+      MONGODB_PASSWORD: password
+      MONGODB_DATABASE: WebShopDb
+      MONGODB_HOST: mongodb
+      MONGODB_PORT: 27017
 
   # You can base this service on the rabbitmq:3-management Docker Hub image.
   # You need to expose the RabbitMQ port 5672 to other containers
@@ -42,11 +50,16 @@ services:
   # A set of needed Docker instructions like 'image:' are shown
   # below, groups should set their values. Groups are free to
   # CRUD the set of instructions as they see fit.
-  # rapid-runner-rabbit:
-  #   image: rabbitmq:3-management
-  #   ports:
-  #   expose:
-  #   networks:
+  rapid-runner-rabbit:
+    image: rabbitmq:3-management
+    ports: 
+      - "5672:5672"
+      - "15672:15672"
+    expose:
+      - "5672"
+      - "15672"
+    networks:
+      - backend
 
   # much of the server-b service entry can be copied from server-a
   # service above. server-b directory Dockerfile has more
@@ -54,15 +67,16 @@ services:
   # A set of needed Docker instructions like 'image:' are shown
   # below, groups should set their values. Groups are free to
   # CRUD this set of instructions as they see fit.
-  # server-b:
-      # image:
-      # depends_on:
-      # command: ["./utils/wait-for-it.sh", "rapid-runner-rabbit:5672", "--",  "npm", "start"]
-      # build:
-      #   dockerfile:
-      #   context:
-      # expose:
-      # networks:
+  server-b:
+      image: project/server-b:1.0
+      depends_on:
+        -  rapid-runner-rabbit
+      command: ["./utils/wait-for-it.sh", "rapid-runner-rabbit:5672", "--",  "node", "."]
+      build:
+        dockerfile: Dockerfile
+        context: ./backend/server-b
+      networks:
+        - backend
 
   # Your group might want to use a database to store some data
   # You can use any database you wish, PostgreSQL, MySQL and
@@ -70,7 +84,17 @@ services:
   # But some groups could find a way to do this without
   # databases (but I could not :-) )
   # database-service would go here.
-  #database:
+  mongodb:
+    image: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - mongo-data:/data/db
+    ports:
+      - "27017:27017"
+    networks:
+      - backend
 
 # Here we create a named network, that all the backend components
 # must be added to for them to be able to communicate through
@@ -83,4 +107,6 @@ networks:
 # Documentation: https://docs.docker.com/storage/volumes/
 # Personally I like to look at the database's image's Dockerfile
 # in the Docker Hub to see what directory it uses to store data.
-# volumes:
+volumes:
+  mongo-data:
+    driver: local
