--- a/backend/server-a/package.json
+++ b/backend/server-a/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "kill": "kill -9 $(lsof -ti:3000)",
-    "reset-db": "node static/init-db.js"
+    "reset-db": "node static/init-db.js",
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,7 @@
     "express": "^4.18.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
+    "mongoose": "5.7.7",
     "swagger-tools": "^0.10.4"
   }
 }
