--- a/backend/server-b/Dockerfile
+++ b/backend/server-b/Dockerfile
@@ -9,4 +9,21 @@
 # First line is provided for your convenience.
 # This line fetches the Node Docker image from Docker Hub
 # which has been tagged "10"
+
+# Use the official Node.js 10 image as base
 FROM node:10
+
+# Set the working directory to /app
+WORKDIR /app
+
+# Copy the package.json and package-lock.json files to the container
+COPY package*.json ./
+
+# Install app dependencies
+RUN npm install
+
+# Copy the rest of the application source code to the container
+COPY . .
+
+# Start the server by default when the container starts
+CMD [ "node", "." ]
