--- a/frontend/SandwichStore/package.json
+++ b/frontend/SandwichStore/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "socket.io-client": "^4.6.1",
     "typescript-cookie": "^1.0.5"
   },
   "devDependencies": {
