--- a/backend/server-a/package.json
+++ b/backend/server-a/package.json
@@ -23,6 +23,7 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "5.7.7",
+    "morgan": "^1.10.0",
     "socket.io": "^4.6.1",
     "swagger-tools": "^0.10.4"
   }
